--- a/assets/templates/root.html
+++ b/assets/templates/root.html
@@ -134,6 +134,8 @@
             progress: $root.tags["section-progress"]
         };
 
+        $Sections = new app.plugins.define("$Sections");
+
         $Tutorial = $root.tags["section-tutorial"];
         $Pointer = $root.tags["section-pointer"];
         $Notify = $root.tags["section-notify"];
