--- a/assets/templates/sections/jqtest/result/jqtest-result-notengage.html
+++ b/assets/templates/sections/jqtest/result/jqtest-result-notengage.html
@@ -2,7 +2,7 @@
 
     <div class="screen__content container">
         <div class="row">
-            <div class="hidden-xs col-md-9">
+            <div class="hidden-xs col-md-9 zIndex-1">
                 <div onClick={ open.specialties } class="specialties__circle">
                     <div class="specialties__circle__count">{ specialtiesCount }</div>
                     <div class="specialties__circle__title">удачных профессий</div>
