--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -55,6 +55,8 @@
 @import '../../assets/css/sections/jqtest/result/graph';
 @import '../../assets/css/sections/jqtest/result/specialties';
 @import '../../assets/css/sections/jqtest/result/path';
+@import '../../assets/css/sections/jqtest/result/finish';
+@import '../../assets/css/sections/jqtest/result/ui';
 
 // blog
 @import 'sections/blog/blog';
