--- a/assets/css/sections/jqtest/_jqtestEnter.scss
+++ b/assets/css/sections/jqtest/_jqtestEnter.scss
@@ -5,7 +5,7 @@
     @extend .overflow-hidden;
 
     #renderSide & {
-        jqtest-enter-content {
+        jqtest-enter {
             @extend .display-block;
             @extend .pos-abs;
             @extend .t-60;
@@ -14,7 +14,7 @@
             @extend .h100p;
         }
     }
-    .oScreen__jqtest__enter__faces {
+    &__faces {
         @extend .pos-abs;
         @extend .t0;
         @extend .r-xs;
@@ -42,8 +42,6 @@
         @extend .text-uppercase;
         @extend .fontWeight-bold;
         @extend .borderRadius-l;
-        @extend .cursor-pointer;
-        @extend .zIndex-1;
 
         &:after {
             @extend .content-empty;
@@ -60,14 +58,27 @@
         }
     }
     &__text {
-        @extend .pos-rel;
-        @extend .pb50;
+        @include abs();
+        @extend .h100v;
         @extend .overflow-visible;
 
+        &__inner {
+            @extend .pos-centered;
+            @extend .pb-l;
+            margin-top:-70px;
+
+            #renderSide & {
+                margin-top:-104px;
+            }
+        }
         &__line {
             @extend .pos-centered-h;
-            @extend .t100;
+            @extend .t50;
+            margin-top:150px;
 
+            #renderSide & {
+                margin-top:104px;
+            }
             &__item {
                 &:after {
                     @extend .display-block;
@@ -106,6 +117,25 @@
                 transform:translate3d(0, 0, 0) rotate(-35deg);
                 transition:transform 0.7s $cubic2501;
                 transition-delay:0.4s;
+            }
+        }
+    }
+}
+@media screen and (max-height: 640px) {
+    .oScreen__jqtest__enter {
+        &__faces {
+            &:after {
+                transform:translate3d(0, -15px, 0) scale(0.75);
+            }
+        }
+        &.showAnim-group1 {
+            .oScreen__jqtest__enter__phone {
+                &__left {
+                    transform:translate3d(2.5vw, 0, 0) rotate(31deg) scale(0.85);
+                }
+                &__right {
+                    transform:translate3d(-2.5vw, 0, 0) rotate(-35deg) scale(0.85);
+                }
             }
         }
     }
