--- a/assets/css/sections/overview/premium/_slides.scss
+++ b/assets/css/sections/overview/premium/_slides.scss
@@ -206,7 +206,7 @@
         height: 973px;
         @extend .bg-cover;
         @extend .willChange-transform;
-        transition:transform .1s;
+        // transition:transform .1s;
         background-image:url('/public/images/promo/premium/slide_finish.jpg');
 
         &__wrapper {
