--- a/assets/templates/sections/jqtest/jqtest-result.html
+++ b/assets/templates/sections/jqtest/jqtest-result.html
@@ -4,11 +4,13 @@
         <div onClick={ hide } onUpdate="none" class="button__close" data-color="gray"></div>
     </div>
 
-    <div name="scroll" class="oScreen__content { app.device.isPhone ? 'notAnim-scroll' : 'bg-white' }">
+    <jqtest-result-link if={ !app.device.isPhone }></jqtest-result-link>
+
+    <div ref="scroll" name="scroll" class="oScreen__content { app.device.isPhone ? 'notAnim-scroll' : 'bg-white' }">
 
         <oScreen-loader></oScreen-loader>
 
-        <div name="content" class="screens screens-phone"></div>
+        <div ref="content" name="content" class="screens screens-phone"></div>
 
     </div>
 
@@ -23,14 +25,24 @@
 
     $.scroll = $$($["scroll"]);
 
-    $.on("before-mount", function(){
+    $.on("mount", function(){
+        $Sections.module("jqtest.result", $);
+        if ($.refs){
+            $.scroll = $$($.refs.scroll);
+            $.content = $$($.refs.content);
+        }
         $.loader = $.tags["oscreen-loader"];
+        // $afterlag.run(function(){
+        //     $.show();
+        // });
     });
 
     $.show = function(callback){
         if ($.loading || $.active) return;
 
         $jqResult = $store.jqtest.jq1;
+
+        $.buttonLink = $.tags["jqtest-result-link"];
 
         $.loader.show(
             {
@@ -57,6 +69,7 @@
                         });
                     }
                     else {
+                        $.buttonLink.show();
                         $afterlag.run(function(){
                             $scope.find(".chart").addClass("showChart");
                             $.section.scrollAnimate.start();
@@ -65,20 +78,26 @@
                     if (_.isFunction(callback)){
                         callback();
                     }
-                    $root.focus("jqtest-result");
+                    if (window.$root && window.$root.focus) $root.focus("jqtest-result");
                 }
             }
         );
     };
 
     $.hide = function(){
-        $.update({
-            active: false
-        })
-        _.onEndTransition($.scroll[0], function(){
-            $.section.unmount(true);
-            $root.focus("all");
-        });
+        if ($.section && $.section.sections && $.section.sections.specialties && $.section.sections.specialties.active){
+            $.section.sections.specialties.hide();
+        }
+        else {
+            $.update({
+                active: false
+            })
+            _.onEndTransition($.scroll[0], function(){
+                $.section.unmount(true);
+                if (window.$root && window.$root.focus) $root.focus("all");
+            });
+            $.buttonLink.hide();
+        }
     };
 
     $.get = {
