--- a/assets/templates/sections/jqtest/result/jqtest-result-specialties.html
+++ b/assets/templates/sections/jqtest/result/jqtest-result-specialties.html
@@ -3,7 +3,7 @@
     <div class="{ 'overflowX-hidden overflowY-auto h100v' : !app.device.isPhone } text-left">
         <div class="screen__content container">
             <div class="row ptb-l xs-ptb0">
-                <div onClick={ hide } class="col-xs-24 col-md-7 col-lg-8 xs-pb-xs specialties__close">
+                <div onClick={ hide } onUpdate="none" class="col-xs-24 col-md-7 col-lg-8 xs-pb-xs specialties__close">
                     <div class="anim anim-tb" delay-show="s" duration-show="l" duration-hide="s">
                         <div class="specialties__title title xs-mb-s">Наиболее подходящие профессии</div>
                     </div>
@@ -47,6 +47,7 @@
         $.active = false;
         $.parent.sections.notengage.update();
         $.parent.scroll.removeClass("overflow-hidden");
+        $.update();
     };
 
 </script>
