--- a/views/private.html
+++ b/views/private.html
@@ -47,28 +47,10 @@
     <script src="/assets/js/templates.modules.js"></script>
     <script src="/assets/js/templates.ui.js"></script>
     <script src="/assets/js/templates.sections.js"></script>
-    <script src="/assets/templates/sections/overview/premium/overviewPremium.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/overview/premium/overviewPremiumContent.tag" type="riot/tag"></script>
-    <script src="/assets/templates/sections/stat/resumeStat.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/stat/resumeStatTabs.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/overview/premium/overviewPremiumColor.tag" type="riot/tag"></script>
-    <script src="/assets/templates/sections/stat/mobile/resumeStat.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/resumeSelect.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/inbox/inboxContent.html" type="riot/tag"></script>
-    <script src="/assets/templates/ui/icons/icon-infinity.html" type="riot/tag"></script>
-
 
     <script src="/assets/js/commons.js"></script>
     <script src="/assets/js/plugins.js"></script>
-    <script src="/assets/js/plugins/sections.js"></script>
-    <script src="/assets/js/plugins/marquee.effects.js"></script>
-    <script src="/assets/js/plugins/marquee.js"></script>
-    <script src="/assets/js/plugins/marquee.play.js"></script>
-    <script src="/assets/js/plugins/screens.js"></script>
-    <script src="/assets/js/plugins/scroll/scroll.Animate.js"></script>
-    <script src="/assets/js/plugins/scroll/scroll.Parallax.js"></script>
-    <script src="/assets/js/components/features/premium.js"></script>
-
+    <script src="/assets/js/plugins/define.js"></script>
 
     <!--/ JS components (store) /-->
     <script src="/assets/js/components/tutorial/welcome.js"></script>
@@ -92,7 +74,7 @@
     <script src="/assets/js/store/resume/premium/fonts.js"></script>
     <script src="/assets/js/store/resume/premium/hobby.js"></script>
     <script src="/assets/js/store/resume/premium/resume.demo.js"></script>
-
+    <script src="/assets/js/jqtest/jq1.js"></script>
     <script src="/assets/js/components/init.js"></script>
 
     <!-- <script src="/assets/js/libs.js"></script>
